# bestmua-data

./: .gitignore  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  VPS_COMMANDS.sh  deploy_setup.sh  pyproject.toml  requirements.txt  run_tests.py
bestmua_data/: __init__.py  category_discovery.py  cli.py  crawler.py  database.py  detail_parser.py  exporter.py  list_parser.py  models.py  normalizer.py
fixtures/: sample_data.py
scripts/: setup_cronjobs.sh  test_crawler.sh
tests/: test_category_discovery.py  test_database.py  test_detail_parser.py  test_exporter.py  test_integration.py  test_list_parser.py  test_normalizer.py
